--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,10 @@
     <artifactId>spark-core_2.11</artifactId>
     <version>2.2.1</version>
 </dependency>
+<dependency>
+    <groupId>org.apache.spark</groupId>
+    <artifactId>spark-sql_2.11</artifactId>
+    <version>2.1.1</version>
+</dependency>
 </dependencies>
 </project>
